4_Seldon/kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: covid-predictor
spec:
  selector:
    app: covid-predictor
  ports:
    - protocol: TCP
      port: 9000
      name: http
      targetPort: 9000
