4_Seldon/kubernetes/istio-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: covid-predictor
spec:
  hosts:
  - "*"
  gateways:
  - seldon-gateway
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: covid-predictor
        port:
          number: 9000
